--- a/boxes.html
+++ b/boxes.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,41 +10,37 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/modernizr.js"></script>
-  	
+
 	<title>Nuesli</title>
 </head>
+
 <body>
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="" width="80" height="17">
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px" />
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/boxes/index.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80" height="37">
-					our boxes
-				</a>
+				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
+						height="37" /></a>
+				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/recipes/index.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="47">
-					recipes
-				</a>
+				<a href="../Nuesli/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47" />Recipes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="47">
-					account
-				</a>
+					<img src="img/Account.svg" alt="" width="80" height="47" />Account</a>
 			</li>
 		</ul>
 	</nav>
-	
+
 	<main class="cd-main">
 		<section class="cd-section services visible">
 			<header>
@@ -63,30 +60,36 @@
 			<div class="cd-content" id="boxes-content">
 				<h1>starter</h1>
 				<p>
-					Scared of commitment? Do not worry, we offer a sample box to ease into the healthy lifestyle. The sample box offers 3 bottle of our special rolled oats to try.
+					Scared of commitment? Do not worry, we offer a sample box to ease into the healthy lifestyle. The
+					sample box offers 3 bottle of our special rolled oats to try.
 				</p>
 
 				<h1>weekly</h1>
 				<p>
-					Our weekly boxes are for those who are not able to commit to a long duration. This box you are able to customize using our app. The weekly box comes each following Monday, offering 7 bottles. 
+					Our weekly boxes are for those who are not able to commit to a long duration. This box you are able
+					to customize using our app. The weekly box comes each following Monday, offering 7 bottles.
 				</p>
-				
+
 				<h1>monthly</h1>
 				<p>
-					Commitment was just never an issue, said everyone who joined. This box is for those who like having a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors. Monthly subscription will come with 28 bottles at the beginning of the month.
+					Commitment was just never an issue, said everyone who joined. This box is for those who like having
+					a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors. Monthly
+					subscription will come with 28 bottles at the beginning of the month.
 				</p>
-				
+
 				<h1>toppings</h1>
 				<p>
-					Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we offer during this month, if you would like to mix and match download our app on all platforms.
+					Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we offer
+					during this month, if you would like to mix and match download our app on all platforms.
 				</p>
 			</div>
-		</section> 
+		</section>
 	</main>
 
 	<div id="cd-loading-bar" data-scale="1" class="services"></div>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/velocity.min.js"></script>
-<script src="js/main.js"></script> 
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/velocity.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
+
 </html>
