--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
       </li>
 
       <li>
-        <a href="../Nuesli/boxes/index.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-            height="37" /></a>
-        <a href="../Nuesli/boxes/index.html" data-menu="boxes">Our Boxes</a>
+        <a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80" height="37" /></a>
+        <a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
       </li>
 
       <li>
-        <a href="../Nuesli/recipes/index.html" data-menu="recipes">
+        <a href="../Nuesli/recipes.html" data-menu="recipes">
           <img src="img/Recipes.svg" alt="" width="80" height="47" />Recipes</a>
       </li>
 
