--- a/recipes.html
+++ b/recipes.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,41 +10,37 @@
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-  	
+
 	<title>Nuesli</title>
 </head>
+
 <body>
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="" width="80" height="17">
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px" />
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/boxes/index.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80" height="37">
-					our boxes
-				</a>
+				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
+						height="37" /></a>
+				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/recipes/index.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="47">
-					recipes
-				</a>
+				<a href="../Nuesli/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47" />Recipes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="47">
-					account
-				</a>
+					<img src="img/Account.svg" alt="" width="80" height="47" />Account</a>
 			</li>
 		</ul>
 	</nav>
-	
+
 	<main class="cd-main">
 		<section class="cd-section projects visible">
 			<header>
@@ -61,8 +58,9 @@
 	</main>
 
 	<div id="cd-loading-bar" data-scale="1" class="projects"></div>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/velocity.min.js"></script>
-<script src="js/main.js"></script>
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/velocity.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
+
 </html>
