--- a/starter.html
+++ b/starter.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,70 +9,69 @@
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/modernizr.js"></script> 
-  	
+	<script src="js/modernizr.js"></script>
+
 	<title>Nuesli</title>
 </head>
+
 <body>
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-				<a href="../Nuesli_v1/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="" width="80" height="17">
+				<a href="../Nuesli/index.html" class="selected" data-menu="index">
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="17px" />
 				</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/boxes.html" data-menu="boxes">
-					<img src="img/boxes.svg" alt="" width="80" height="37">
-					our boxes
-				</a>
+				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
+						height="37" /></a>
+				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/recipes.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="47">
-					recipes
-				</a>
+				<a href="../Nuesli/recipes.html" data-menu="recipes">
+					<img src="img/Recipes.svg" alt="" width="80" height="47" />Recipes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli_v1/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="47">
-					account
-				</a>
+				<a href="../Nuesli/account.html" data-menu="account">
+					<img src="img/Account.svg" alt="" width="80" height="47" />Account</a>
 			</li>
 		</ul>
 	</nav>
-		
-	
+
+
 	<main class="cd-main">
 		<section class="cd-section services visible">
 			<header>
 				<div class="page">
-				<div class="cd-subpage">
-					<!-- <h2>starter box</h2> -->
-					<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
-					<div class="fruits">
-						<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
-					</div>
-					<div class="cd-starter">
-						<h4>starter box</h4>
-						<h5>comes with 3 bottles</h5>
-						<p>Our Starter Box is to introduce a healthier lifestyle by starting off the day right. We believe that eating one bottle every morning will bring a fuller, energy packed day. Our Starter Box offers three flavors to begin your journey.</p>
-						<div class="btn-grp">
-							<a href="/starter.html" class="button draw meet">ADD TO CART</a>
+					<div class="cd-subpage">
+						<!-- <h2>starter box</h2> -->
+						<img src="img/Box_02.png" alt="box" height="50%" width="50%" align="left">
+						<div class="fruits">
+							<img src="img/Fruits/Fruits_01.png" alt="Almond" height="70%" width="70%">
+						</div>
+						<div class="cd-starter">
+							<h4>starter box</h4>
+							<h5>comes with 3 bottles</h5>
+							<p>Our Starter Box is to introduce a healthier lifestyle by starting off the day right. We
+								believe that eating one bottle every morning will bring a fuller, energy packed day. Our
+								Starter Box offers three flavors to begin your journey.</p>
+							<div class="btn-grp">
+								<a href="/starter.html" class="button draw meet">ADD TO CART</a>
+							</div>
 						</div>
 					</div>
 				</div>
-				</div>
 			</header>
-		</section> 
-	</main> 
+		</section>
+	</main>
 
 	<div id="cd-loading-bar" data-scale="1" class="services"></div>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/velocity.min.js"></script>
-<script src="js/main.js"></script> 
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/velocity.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
+
 </html>
