Improved nav bar

--- a/account.html
+++ b/account.html
@@ -19,13 +19,12 @@
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" />
-				</a>
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="40" /></a>
+						height="40" />boxes</a>
 				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
@@ -40,6 +39,7 @@
 			</li>
 		</ul>
 	</nav>
+
 	<main class="cd-main">
 		<section class="cd-section contact visible">
 			<div class="header">
