--- a/boxes.html
+++ b/boxes.html
@@ -15,17 +15,16 @@
 </head>
 
 <body>
-	<<nav class="cd-side-navigation">
+	<nav class="cd-side-navigation">
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" />
-				</a>
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="40" /></a>
+						height="40" />boxes</a>
 				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
@@ -39,64 +38,64 @@
 					<img src="img/Account.svg" alt="" width="80" height="38" />Account</a>
 			</li>
 		</ul>
-		</nav>
+	</nav>
 
-		<main class="cd-main">
-			<section class="cd-section services visible">
-				<div class="header">
-					<div class="cd-title">
-						<h1>subscription boxes</h1>
-						<h2>pick one</h2>
-						<div class="btn-grp">
-							<a href="/starter.html" class="button draw meet">STARTER</a>
-							<a href="/weekly.html" class="button draw meet">WEEKLY</a>
-							<a href="/monthly.html" class="button draw meet">MONTHLY</a>
-						</div>
+	<main class="cd-main">
+		<section class="cd-section services visible">
+			<div class="header">
+				<div class="cd-title">
+					<h1>subscription boxes</h1>
+					<h2>pick one</h2>
+					<div class="btn-grp">
+						<a href="/starter.html" class="button draw meet">STARTER</a>
+						<a href="/weekly.html" class="button draw meet">WEEKLY</a>
+						<a href="/monthly.html" class="button draw meet">MONTHLY</a>
 					</div>
-
-					<a href="#boxes-content" class="cd-scroll"></a>
 				</div>
 
-				<div class="cd-content" id="boxes-content">
-					<h1>starter</h1>
-					<p>
-						Scared of commitment? Do not worry, we offer a sample box to ease into the healthy
-						lifestyle.
-						The
-						sample box offers 3 bottle of our special rolled oats to try.
-					</p>
+				<a href="#boxes-content" class="cd-scroll"></a>
+			</div>
 
-					<h1>weekly</h1>
-					<p>
-						Our weekly boxes are for those who are not able to commit to a long duration. This box you
-						are
-						able
-						to customize using our app. The weekly box comes each following Monday, offering 7 bottles.
-					</p>
+			<div class="cd-content" id="boxes-content">
+				<h1>starter</h1>
+				<p>
+					Scared of commitment? Do not worry, we offer a sample box to ease into the healthy
+					lifestyle.
+					The
+					sample box offers 3 bottle of our special rolled oats to try.
+				</p>
 
-					<h1>monthly</h1>
-					<p>
-						Commitment was just never an issue, said everyone who joined. This box is for those who like
-						having
-						a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors.
-						Monthly
-						subscription will come with 28 bottles at the beginning of the month.
-					</p>
+				<h1>weekly</h1>
+				<p>
+					Our weekly boxes are for those who are not able to commit to a long duration. This box you
+					are
+					able
+					to customize using our app. The weekly box comes each following Monday, offering 7 bottles.
+				</p>
 
-					<h1>toppings</h1>
-					<p>
-						Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we
-						offer
-						during this month, if you would like to mix and match download our app on all platforms.
-					</p>
-				</div>
-			</section>
-		</main>
+				<h1>monthly</h1>
+				<p>
+					Commitment was just never an issue, said everyone who joined. This box is for those who like
+					having
+					a hearty breakfast each morning. Our monthly box offers a number of upcoming flavors.
+					Monthly
+					subscription will come with 28 bottles at the beginning of the month.
+				</p>
 
-		<div id="cd-loading-bar" data-scale="1" class="services"></div>
-		<script src="js/jquery-2.1.4.js"></script>
-		<script src="js/velocity.min.js"></script>
-		<script src="js/main.js"></script>
+				<h1>toppings</h1>
+				<p>
+					Allergies? No problem. Don't like nuts? No problem. These are our current toppings that we
+					offer
+					during this month, if you would like to mix and match download our app on all platforms.
+				</p>
+			</div>
+		</section>
+	</main>
+
+	<div id="cd-loading-bar" data-scale="1" class="services"></div>
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/velocity.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
