--- a/starter.html
+++ b/starter.html
@@ -19,13 +19,12 @@
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" />
-				</a>
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="40" /></a>
+						height="40" />boxes</a>
 				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
 			</li>
 
@@ -41,7 +40,6 @@
 		</ul>
 	</nav>
 
-
 	<main class="cd-main">
 		<section class="cd-section services visible">
 			<div class='header'>
@@ -55,8 +53,10 @@
 						<div class="cd-starter">
 							<h4>starter box</h4>
 							<h5>comes with 3 bottles</h5>
-							<p>Our Starter Box is to introduce a healthier lifestyle by starting off the day right. We
-								believe that eating one bottle every morning will bring a fuller, energy packed day. Our
+							<p>Our Starter Box is to introduce a healthier lifestyle by starting off the day right.
+								We
+								believe that eating one bottle every morning will bring a fuller, energy packed day.
+								Our
 								Starter Box offers three flavors to begin your journey.</p>
 							<div class="btn-grp">
 								<a href="/starter.html" class="button draw meet">ADD TO CART</a>
