Added padding and box model

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <ul>
       <li>
         <a href="../Nuesli/index.html" class="selected" data-menu="index">
-          <img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
+          <img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" class="logo-large" />
+          <img src="img/U_Icon.png" alt="Nuesli Logo" width="65px" height="70px" class="logo-small" />Logo</a>
       </li>
 
       <li>
@@ -51,7 +52,7 @@
       <div class="header">
         <div class="cd-quote">
           <h1>
-            <!-- <img src="img/Logo_Icon_W.png"><br> -->
+            <img src="img/Logo_Icon_W.png"><br>
             Nuesli's hearty cereal is made all organic ingredients. Perfect
             for those who are pursuing a wholesome lifestyle. We believe in
             nurturing our bodies through the foods we eat.
