--- a/weekly.html
+++ b/weekly.html
@@ -44,7 +44,7 @@
 			<div class="header">
 				<div class="page">
 					<div class="cd-subpage">
-						<img class="box-img" src="img/Box_02.png" alt="box" height="40%" width="40%">
+						<img class="box-img" src="img/Box_02.png" alt="box" height="758" width="710">
 						<div class="fruits">
 							<img src="img/Fruits/Fruits_02.png" alt="Almond" height="70%" width="70%">
 						</div>
