Improved nav, logo

--- a/lunch.html
+++ b/lunch.html
@@ -19,23 +19,23 @@
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" class="logo-large" />
+					<img src="img/U_Icon.png" alt="Nuesli Logo" width="65px" height="70px" class="logo-small" />Logo</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/boxes.html" data-menu="boxes"><img src="img/boxes.svg" alt="" width="80"
-						height="40" />boxes</a>
-				<a href="../Nuesli/boxes.svg" data-menu="boxes">Our Boxes</a>
+				<a href="../Nuesli/boxes.html" data-menu="boxes">
+					<img src="img/boxes.svg" alt="Our Boxes" width="80" height="40" />boxes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/recipes.html" data-menu="recipes">
-					<img src="img/Recipes.svg" alt="" width="80" height="40" />Recipes</a>
+					<img src="img/Recipes.svg" alt="Our Recipes" width="80" height="40" />Recipes</a>
 			</li>
 
 			<li>
 				<a href="../Nuesli/account.html" data-menu="account">
-					<img src="img/Account.svg" alt="" width="80" height="38" />Account</a>
+					<img src="img/Account.svg" alt="Our Recipes" width="80" height="38" />Account</a>
 			</li>
 		</ul>
 	</nav>
