--- a/weekly.html
+++ b/weekly.html
@@ -19,7 +19,8 @@
 		<ul>
 			<li>
 				<a href="../Nuesli/index.html" class="selected" data-menu="index">
-					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" /></a>
+					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" class="logo-large" />
+					<img src="img/U_Icon.png" alt="Nuesli Logo" width="65px" height="70px" class="logo-small" />Logo</a>
 			</li>
 
 			<li>
