--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="cd-quote">
           <h1>
             <img src="img/Logo_Icon_W.png"><br>
-            Nuesli's hearty cereal is made all organic ingredients. Perfect
+            Our hearty cereal is made all organic ingredients. Perfect
             for those who are pursuing a wholesome lifestyle. We believe in
             nurturing our bodies through the foods we eat.
           </h1>
