Path way for links

--- a/boxes.html
+++ b/boxes.html
@@ -24,17 +24,17 @@
 			</li>
 
 			<li>
-				<a href="../boxes.html" data-menu="boxes">
+				<a href="/boxes.html" data-menu="boxes">
 					<img src="img/boxes.svg" alt="Our Boxes" width="80" height="40" />boxes</a>
 			</li>
 
 			<li>
-				<a href="../recipes.html" data-menu="recipes">
+				<a href="/recipes.html" data-menu="recipes">
 					<img src="img/Recipes.svg" alt="Our Recipes" width="80" height="40" />Recipes</a>
 			</li>
 
 			<li>
-				<a href="../account.html" data-menu="account">
+				<a href="/account.html" data-menu="account">
 					<img src="img/Account.svg" alt="Our Recipes" width="80" height="38" />Account</a>
 			</li>
 		</ul>
