Updated Pathway for links

--- a/recipes.html
+++ b/recipes.html
@@ -18,23 +18,23 @@
 	<nav class="cd-side-navigation">
 		<ul>
 			<li>
-				<a href="../Nuesli/index.html" class="selected" data-menu="index">
+				<a href="/Nuesli/index.html" class="selected" data-menu="index">
 					<img src="img/logo.svg" alt="Nuesli Logo" width="80px" height="70px" class="logo-large" />
 					<img src="img/U_Icon.png" alt="Nuesli Logo" width="65px" height="70px" class="logo-small" />Logo</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/boxes.html" data-menu="boxes">
+				<a href="/Nuesli/boxes.html" data-menu="boxes">
 					<img src="img/boxes.svg" alt="Our Boxes" width="80" height="40" />boxes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/recipes.html" data-menu="recipes">
+				<a href="/Nuesli/recipes.html" data-menu="recipes">
 					<img src="img/Recipes.svg" alt="Our Recipes" width="80" height="40" />Recipes</a>
 			</li>
 
 			<li>
-				<a href="../Nuesli/account.html" data-menu="account">
+				<a href="/Nuesli/account.html" data-menu="account">
 					<img src="img/Account.svg" alt="Our Recipes" width="80" height="38" />Account</a>
 			</li>
 		</ul>
