--- a/boxes.html
+++ b/boxes.html
@@ -47,9 +47,9 @@
 					<h1>subscription boxes</h1>
 					<h2>pick one</h2>
 					<div class="btn-grp">
-						<a href="Nuesli/starter.html" class="button draw meet">STARTER</a>
-						<a href="Nuesli/weekly.html" class="button draw meet">WEEKLY</a>
-						<a href="Nuesli/monthly.html" class="button draw meet">MONTHLY</a>
+						<a href="starter.html" class="button draw meet">STARTER</a>
+						<a href="weekly.html" class="button draw meet">WEEKLY</a>
+						<a href="monthly.html" class="button draw meet">MONTHLY</a>
 					</div>
 				</div>
 
