--- a/recipes.html
+++ b/recipes.html
@@ -47,9 +47,9 @@
 					<h1>Recipes</h1>
 					<h2>pick one</h2>
 					<div class="btn-grp">
-						<a href="/breakfast.html" class="button draw meet">BREAKFAST</a>
-						<a href="/lunch.html" class="button draw meet">LUNCH</a>
-						<a href="/dessert.html" class="button draw meet">DESSERT</a>
+						<a href="breakfast.html" class="button draw meet">BREAKFAST</a>
+						<a href="lunch.html" class="button draw meet">LUNCH</a>
+						<a href="dessert.html" class="button draw meet">DESSERT</a>
 					</div>
 				</div>
 			</div>
